# weizz-fuzzer

./: .gitignore  CMakeLists.txt  Makefile  README.md  prepare_system.sh  weizz-clang++  weizz-cmin
include/: alloc-inl.h  config.h  debug.h  hash.h  types.h  weizz-shared.h  weizz.h
llvm-tracer/: Makefile  README.md  instrument.c  memorycmp.c  test.c  weizz-cc  weizz-llvm.h
qemu-tracer/: README  build-weizz.sh
qemu-tracer/accel/tcg/: cpu-exec.c  pmparser.h  translate-all.c
qemu-tracer/include/: weizz-qemu.h
qemu-tracer/linux-user/: elfload.c  syscall.c
qemu-tracer/roms/seabios/: config.mak
qemu-tracer/roms/vgabios/: config.mak
qemu-tracer/tcg/: tcg.c
src/: bitmap.c  checksums.c  extras.c  fuzz_one.c  get_deps.c  globals.c  init.c  main.c  pre_fuzz.c  queue.c  run.c  signals.c  stats.c  surgical_fuzz.c  tags.c  tags_old.c  utils.c
testcases/: 466b.pcap  6.7kb.elf
utils/: weizz-showmap.c
